tests/toylang/neg/001139_mutation.toylang
program a = { if then then sleep; } .
